[gd_scene load_steps=4 format=3 uid="uid://bhoid1trkoqrp"]

[ext_resource type="Script" uid="uid://bd0e47mwkyvb2" path="res://desk/Resumes/resumes.gd" id="1_jlcb0"]
[ext_resource type="PackedScene" uid="uid://148tvjdfcv2j" path="res://desk/Resumes/resume.tscn" id="2_w0461"]
[ext_resource type="PackedScene" uid="uid://bq8o5jne4yws1" path="res://utilities/paginator.tscn" id="3_o2tq0"]

[node name="Resumes" type="Node2D" node_paths=PackedStringArray("paginator", "resume")]
script = ExtResource("1_jlcb0")
paginator = NodePath("Paginator")
resume = NodePath("Resume")

[node name="Left" type="Button" parent="."]
offset_left = -200.0
offset_top = -47.0
offset_right = -161.0
offset_bottom = 48.0
text = "<"

[node name="Right" type="Button" parent="."]
offset_left = 218.0
offset_top = -40.0
offset_right = 259.0
offset_bottom = 55.0
text = ">"

[node name="Resume" parent="." instance=ExtResource("2_w0461")]
position = Vector2(5, -2)

[node name="Paginator" parent="." instance=ExtResource("3_o2tq0")]

[connection signal="pressed" from="Left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="Right" to="." method="_on_right_pressed"]
[connection signal="on_hire_button_pressed" from="Resume" to="." method="_on_resume_on_hire_button_pressed"]
